--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
 <div class="form-container">
-  <img src="atlas logo.png" alt="Atlas Benefit Consulting Logo" class="logo">
+  <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="max-width:200px; margin-bottom:20px;"><circle cx="256" cy="256" r="256" fill="#0073e6"/><text x="50%" y="54%" font-size="90" text-anchor="middle" fill="white" font-family="Arial, sans-serif">Atlas</text></svg>
   <h2>Let's Connect</h2>
   <p class="intro">
     <strong>Let’s Get You Squared Away.</strong><br><br>
@@ -51,4 +51,3 @@
 
 </body>
 </html>
-
